src/objects/CampaignMember/fields/CVMA_Original_RSVP_Date__c.field-meta.xml
<CustomField>
    <fullName>CVMA_Original_RSVP_Date__c</fullName>
    <description>Original RSVP timestamp from migration</description>
    <inlineHelpText>Preserved from original RSVP system (migration audit trail)</inlineHelpText>
    <label>Original RSVP Date</label>
    <type>DateTime</type>
</CustomField>