src/objects/CampaignMember/fields/CVMA_Plus_One__c.field-meta.xml
<CustomField>
    <fullName>CVMA_Plus_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if member is bringing a plus one to the event</description>
    <inlineHelpText>Check if attending with a guest</inlineHelpText>
    <label>Plus One</label>
    <type>Checkbox</type>
</CustomField>