src/objects/CampaignMember/fields/CVMA_Plus_One_Name__c.field-meta.xml
<CustomField>
    <fullName>CVMA_Plus_One_Name__c</fullName>
    <description>Name of the plus one guest</description>
    <inlineHelpText>Enter the name of your guest (if applicable)</inlineHelpText>
    <label>Plus One Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>