src/objects/CampaignMember/fields/CVMA_RSVP_Notes__c.field-meta.xml
<CustomField>
    <fullName>CVMA_RSVP_Notes__c</fullName>
    <description>Additional notes for the RSVP</description>
    <inlineHelpText>Any additional information or special requirements</inlineHelpText>
    <label>RSVP Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>